FEAT: completed addStory method
DESCRIPTION: addStory makes a request with params token and story and returns a Story instance. TODO: will need to update navbar for functionality

--- a/index.html
+++ b/index.html
@@ -36,6 +36,12 @@
 <nav>
   <div class="navbar-brand">
     <a class="nav-link" href="#" id="nav-all">Hack or Snooze</a>
+	<!-- Navbar links -->
+	<div class="navbar-links hidden">
+		<a class="nav-link" href="#" id="nav-submit">submit</a>
+		<a class="nav-link" href="#" id="nav-favorites">favorites</a>
+		<a class="nav-link" href="#" id="nav-my-stories">my stories</a>
+	</div>
   </div>
   <div class="nav-right">
     <a class="nav-link" href="#" id="nav-login">login/signup</a>
@@ -95,6 +101,34 @@
     <button type="submit">create account</button>
   </form>
 </section>
+
+<!-- Story Form -->
+	<form
+		action="#"
+		id="story-form"
+		class="hidden"
+		method="POST">
+		<div>
+			<label for="create-author" >
+				Author
+			</label>
+			<input id="create-author" type="text" placeholder="Author (required)">
+		</div>
+		<div>
+			<label for="create-title">
+				Title
+			</label>
+			<input id="create-title" type="text" placeholder="Title (required)">
+		</div>
+		<div>
+			<label for="create-url">
+				URL
+			</label>
+			<input id="create-url" type="text" placeholder="URL (required)">
+		</div>
+		<!-- Submit button for Create Story -->
+		<button type="submit">Submit</button>
+	</form>
 
 <!-- Library JS & our JS -->
 <script src="https://unpkg.com/jquery"></script>
