--- a/index.html
+++ b/index.html
@@ -2,133 +2,132 @@
 
 <!-- Hack or Snooze
 
-     This is the only HTML page; the applications manipulates this DOM
-     during use.
+		 This is the only HTML page; the applications manipulates this DOM
+		 during use.
 
-     Primary authors:
-     - Michael Hueter: initial creation, 2018
-     - Elie Schoppik: refactoring using OO, 2019
-     - Joel Burton: refactored and componentized, 2020
-     - You!
-  -->
+		 Primary authors:
+		 - Michael Hueter: initial creation, 2018
+		 - Elie Schoppik: refactoring using OO, 2019
+		 - Joel Burton: refactored and componentized, 2020
+		 - Jhensen Ray Agni: refactored, 2021
+	-->
 
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Hack or Snooze</title>
-  <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
-      integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
-      crossorigin="anonymous">
-  <link rel="stylesheet" href="css/site.css">
-  <link rel="stylesheet" href="css/user.css">
-  <link rel="stylesheet" href="css/stories.css">
-  <link rel="stylesheet" href="css/nav.css">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<title>Hack or Snooze</title>
+	<link
+			rel="stylesheet"
+			href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
+			integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
+			crossorigin="anonymous">
+	<link rel="stylesheet" href="css/site.css">
+	<link rel="stylesheet" href="css/user.css">
+	<link rel="stylesheet" href="css/stories.css">
+	<link rel="stylesheet" href="css/nav.css">
 </head>
 
 <body>
 
 <!-- top navigation bar -->
 <nav>
-  <div class="navbar-brand">
-    <a class="nav-link" href="#" id="nav-all">Hack or Snooze</a>
+	<div class="navbar-brand">
+		<a class="nav-link" href="#" id="nav-all">Hack or Snooze</a>
 	<!-- Navbar links -->
-	<div class="navbar-links hidden">
+	<div class="main-nav-links hidden">
 		<a class="nav-link" href="#" id="nav-submit">submit</a>
 		<a class="nav-link" href="#" id="nav-favorites">favorites</a>
 		<a class="nav-link" href="#" id="nav-my-stories">my stories</a>
 	</div>
-  </div>
-  <div class="nav-right">
-    <a class="nav-link" href="#" id="nav-login">login/signup</a>
-    <a class="nav-link" href="#" id="nav-user-profile"></a>
-    <a class="hidden" id="nav-logout" href="#"><small>(logout)</small></a>
-  </div>
+	</div>
+	<div class="nav-right">
+		<a class="nav-link" href="#" id="nav-login">login/signup</a>
+		<a class="nav-link" href="#" id="nav-user-profile"></a>
+		<a class="hidden" id="nav-logout" href="#"><small>(logout)</small></a>
+	</div>
 </nav>
 
 <!-- area for stories (all stories, user stories, favorites) -->
 <section class="stories-container container">
 
-  <!-- loading message (removed by JS after stories loaded) -->
-  <div id="stories-loading-msg">Loading&hellip;</div>
+	<!-- loading message (removed by JS after stories loaded) -->
+	<div id="stories-loading-msg">Loading&hellip;</div>
 
-  <!-- List of all stories -->
-  <ol id="all-stories-list" class="stories-list"></ol>
+	<!-- Story Form -->
+	<form action="#" id="story-form" class="hidden">
+		<!-- Author input -->
+		<div>
+			<label for="create-author" >
+				author
+			</label>
+			<input id="create-author" type="text" placeholder="story author (required)">
+		</div>
+		<!-- Title input -->
+		<div>
+			<label for="create-title">
+				title
+			</label>
+			<input id="create-title" type="text" placeholder="story title (required)">
+		</div>
+		<!-- URL input -->
+		<div>
+			<label for="create-url">
+				url
+			</label>
+			<input id="create-url" type="text" placeholder="story URL (required)">
+		</div>
+		<!-- Submit button for Create Story -->
+		<button type="submit">Submit</button>
+	</form>
+
+	<!-- List of all stories -->
+	<ol id="all-stories-list" class="stories-list"></ol>
 
 </section>
 
 <!-- Login and signup forms -->
 <section class="account-forms-container container">
 
-  <!-- Login form -->
-  <form action="#" id="login-form" class="account-form hidden" method="post">
-    <h4>Login</h4>
-    <div class="login-input">
-      <label for="login-username">username</label>
-      <input id="login-username" autocomplete="current-username">
-    </div>
-    <div class="login-input">
-      <label for="login-password">password</label>
-      <input id="login-password" type="password" autocomplete="current-password">
-    </div>
-    <button type="submit">login</button>
-    <hr>
-  </form>
-
-  <!-- Signup form -->
-  <form
-      action="#"
-      id="signup-form"
-      class="account-form hidden"
-      method="post">
-    <h4>Create Account</h4>
-    <div class="login-input">
-      <label for="signup-name">name</label>
-      <input id="signup-name" autocapitalize="words">
-    </div>
-    <div class="login-input">
-      <label for="signup-username">username</label>
-      <input id="signup-username" autocomplete="new-username">
-    </div>
-    <div class="login-input">
-      <label for="signup-password">password</label>
-      <input id="signup-password" autocomplete="new-password" type="password">
-    </div>
-    <button type="submit">create account</button>
-  </form>
-</section>
-
-<!-- Story Form -->
-	<form
-		action="#"
-		id="story-form"
-		class="hidden"
-		method="POST">
-		<div>
-			<label for="create-author" >
-				Author
-			</label>
-			<input id="create-author" type="text" placeholder="Author (required)">
+	<!-- Login form -->
+	<form action="#" id="login-form" class="account-form hidden" method="post">
+		<h4>Login</h4>
+		<div class="login-input">
+			<label for="login-username">username</label>
+			<input id="login-username" autocomplete="current-username">
 		</div>
-		<div>
-			<label for="create-title">
-				Title
-			</label>
-			<input id="create-title" type="text" placeholder="Title (required)">
+		<div class="login-input">
+			<label for="login-password">password</label>
+			<input id="login-password" type="password" autocomplete="current-password">
 		</div>
-		<div>
-			<label for="create-url">
-				URL
-			</label>
-			<input id="create-url" type="text" placeholder="URL (required)">
-		</div>
-		<!-- Submit button for Create Story -->
-		<button type="submit">Submit</button>
+		<button type="submit">login</button>
+		<hr>
 	</form>
+
+	<!-- Signup form -->
+	<form
+			action="#"
+			id="signup-form"
+			class="account-form hidden"
+			method="post">
+		<h4>Create Account</h4>
+		<div class="login-input">
+			<label for="signup-name">name</label>
+			<input id="signup-name" autocapitalize="words">
+		</div>
+		<div class="login-input">
+			<label for="signup-username">username</label>
+			<input id="signup-username" autocomplete="new-username">
+		</div>
+		<div class="login-input">
+			<label for="signup-password">password</label>
+			<input id="signup-password" autocomplete="new-password" type="password">
+		</div>
+		<button type="submit">create account</button>
+	</form>
+</section>
 
 <!-- Library JS & our JS -->
 <script src="https://unpkg.com/jquery"></script>
