--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 <!-- Library JS & our JS -->
 <script src="https://unpkg.com/jquery"></script>
 <script src="https://unpkg.com/axios/dist/axios.js"></script>
-
+<script src="https://kit.fontawesome.com/cc7a288009.js" crossorigin="anonymous"></script>
 <script src="js/models.js"></script>
 <script src="js/main.js"></script>
 <script src="js/nav.js"></script>
